--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-lazyload": "^3.2.0",
     "react-scripts": "4.0.3",
     "react-world-flags": "^1.4.0",
     "web-vitals": "^1.0.1"
